// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check codebases column-offset - eslint should give expected output 1`] = `
"
./example.js
  7:4  error  Cannot resolve name \`test\`  flowtype-errors/show-errors
  7:9  error  Cannot resolve name \`x\`     flowtype-errors/show-errors
  8:6  error  Cannot resolve name \`y\`     flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Check codebases coverage-fail - eslint should give expected output 1`] = `
"
./example.js
  1:1  error  Expected coverage to be at least 50%, but is: 0%  flowtype-errors/enforce-min-coverage

✖ 1 problem (1 error, 0 warnings)

"
`;

exports[`Check codebases coverage-fail2 - eslint should give expected output 1`] = `
"
./example.js
  1:1  error  Expected coverage to be at least 50%, but is: 33.33%  flowtype-errors/enforce-min-coverage

✖ 1 problem (1 error, 0 warnings)

"
`;

exports[`Check codebases coverage-ok - eslint should give expected output 1`] = `""`;

exports[`Check codebases coverage-ok2 - eslint should give expected output 1`] = `""`;

exports[`Check codebases flow-pragma-1 - eslint should give expected output 1`] = `
"
./example.js
   4:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 3)  flowtype-errors/show-errors
   7:6   error  Cannot resolve name \`x\`                                                            flowtype-errors/show-errors
  14:14  error  Cannot perform arithmetic operation because string is not a number                 flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Check codebases flow-pragma-2 - eslint should give expected output 1`] = `
"
./example.js
   6:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 5)  flowtype-errors/show-errors
   9:6   error  Cannot resolve name \`x\`                                                            flowtype-errors/show-errors
  16:14  error  Cannot perform arithmetic operation because string is not a number                 flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Check codebases folder with spaces - eslint should give expected output 1`] = `""`;

exports[`Check codebases html-support - eslint should give expected output 1`] = `
"
./a.vue
   8:15  error  Cannot resolve module \`./b.vue\`                                             flowtype-errors/show-errors
  14:19  error  Cannot assign \`\\"string\\"\` to \`c\` because string is incompatible with number  flowtype-errors/show-errors

✖ 2 problems (2 errors, 0 warnings)

"
`;

exports[`Check codebases no-flow-pragma - eslint should give expected output 1`] = `""`;

exports[`Check codebases project-1 - eslint should give expected output 1`] = `
"
./1.example.js
   5:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 4)  flowtype-errors/show-errors
   8:6   error  Cannot resolve name \`x\`                                                            flowtype-errors/show-errors
  15:14  error  Cannot perform arithmetic operation because string is not a number                 flowtype-errors/show-errors

./2.example.js
   8:24  error  Missing type annotation for \`x\`  flowtype-errors/show-errors
  12:6   error  Cannot resolve name \`x\`          flowtype-errors/show-errors

./3.example.js
   9:10  error  Cannot return \`'undefined'\` because string is incompatible with number (see line 8)                  flowtype-errors/show-errors
  13:10  error  Cannot return \`some\` because string (see line 12) is incompatible with number (see line 12)          flowtype-errors/show-errors
  16:19  error  Cannot assign \`'hello world!'\` to \`str\` because string is incompatible with number                   flowtype-errors/show-errors
  18:7   error  Cannot declare \`who\` (see line 12) because the name is already bound                                 flowtype-errors/show-errors
  20:5   error  Cannot call \`moo\` because no arguments are expected by function (see line 8)                         flowtype-errors/show-errors
  20:11  error  Cannot add \`str\` and \`who\` because function (see line 12) is incompatible with number (see line 16)  flowtype-errors/show-errors

./4.example.js
  27:13  error  Cannot create \`Foo\` element because property \`lastName\` is missing in props but exists in \`Props\` (see line 11)   flowtype-errors/show-errors
  27:27  error  Cannot create \`Foo\` element because string is incompatible with object type (see line 7) in property \`firstName\`  flowtype-errors/show-errors

./5.example.js
  8:3  error  Cannot call \`s\` with \`'4'\` bound to \`x\` because string is incompatible with number (see line 4)  flowtype-errors/show-errors

./6.example.js
   8:5  error  Cannot call \`foo\` with \`1234\` bound to \`bar\` because number is incompatible with object type (see line 4)                                        flowtype-errors/show-errors
  10:5  error  Cannot call \`foo\` with object literal bound to \`bar\` because property \`baz\` is missing in object literal but exists in object type (see line 4)  flowtype-errors/show-errors

./7.example.js
  6:3  error  Cannot call \`s\` with \`'4'\` bound to \`x\` because string is incompatible with number (see ./5.example.js:4)  flowtype-errors/show-errors

./8.example.js
  6:5  error  Cannot call \`foo\` with \`1234\` bound to \`bar\` because number is incompatible with object type (see ./6.example.js:4)                                        flowtype-errors/show-errors
  8:5  error  Cannot call \`foo\` with object literal bound to \`bar\` because property \`baz\` is missing in object literal but exists in object type (see ./6.example.js:4)  flowtype-errors/show-errors

./9.example.js
  8:18  error  Cannot create \`Hello\` element because property \`name\` is missing in props but exists in object type (see ./9.example.import.js:6)                                                                                                                                                flowtype-errors/show-errors
  8:28  error  Cannot call \`ReactDOM.render\` with \`document.getElementById(...)\` bound to \`container\` because null (see https://github.com/facebook/flow/blob/v0.66.0/lib/dom.js#L623) is incompatible with \`Element\` (see https://github.com/facebook/flow/blob/v0.66.0/lib/react-dom.js#L18)  flowtype-errors/show-errors

✖ 21 problems (21 errors, 0 warnings)

"
`;

exports[`Check codebases run-all - eslint should give expected output 1`] = `
"
./example.js
   2:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 1)  flowtype-errors/show-errors
   5:6   error  Cannot resolve name \`x\`                                                            flowtype-errors/show-errors
  12:14  error  Cannot perform arithmetic operation because string is not a number                 flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Check codebases run-all-flowdir - eslint should give expected output 1`] = `
"
./subdir/example.js
   2:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 1)  flowtype-errors/show-errors
   5:6   error  Cannot resolve name \`x\`                                                            flowtype-errors/show-errors
  12:14  error  Cannot perform arithmetic operation because string is not a number                 flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)

"
`;

exports[`Check codebases warnings-all - eslint should give expected output 1`] = `
"
./example.js
  9:22  warning  Unclear type. Using \`any\`, \`Object\`, or \`Function\` types is not safe! (\`unclear-type\`)  flowtype-errors/show-warnings

✖ 1 problem (0 errors, 1 warning)

"
`;

exports[`Check codebases warnings-default - eslint should give expected output 1`] = `""`;

exports[`Check codebases warnings-mixed - eslint should give expected output 1`] = `
"
./example.js
  10:22  warning  Unclear type. Using \`any\`, \`Object\`, or \`Function\` types is not safe! (\`unclear-type\`)             flowtype-errors/show-warnings
  19:10  error    Cannot return \`x.reduce(...) / x.length\` because number is incompatible with string (see line 18)  flowtype-errors/show-errors

✖ 2 problems (1 error, 1 warning)

"
`;

exports[`Format 1.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 6,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 6,
        "offset": 91,
      },
      "start": Object {
        "column": 10,
        "line": 6,
        "offset": 83,
      },
    },
    "message": "Cannot return \`'string'\` because string is incompatible with boolean (see line 5).",
    "start": 6,
    "type": "default",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 9,
        "offset": 102,
      },
      "start": Object {
        "column": 6,
        "line": 9,
        "offset": 101,
      },
    },
    "message": "Cannot resolve name \`x\`.",
    "start": 9,
    "type": "default",
  },
  Object {
    "end": 16,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 16,
        "offset": 208,
      },
      "start": Object {
        "column": 14,
        "line": 16,
        "offset": 205,
      },
    },
    "message": "Cannot perform arithmetic operation because string is not a number.",
    "start": 16,
    "type": "default",
  },
]
`;

exports[`Format 2.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 9,
        "offset": 96,
      },
      "start": Object {
        "column": 24,
        "line": 9,
        "offset": 95,
      },
    },
    "message": "Missing type annotation for \`x\`.",
    "start": 9,
    "type": "missing-annotation",
  },
  Object {
    "end": 13,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 13,
        "offset": 121,
      },
      "start": Object {
        "column": 6,
        "line": 13,
        "offset": 120,
      },
    },
    "message": "Cannot resolve name \`x\`.",
    "start": 13,
    "type": "default",
  },
]
`;

exports[`Format 3.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 10,
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 10,
        "offset": 145,
      },
      "start": Object {
        "column": 10,
        "line": 10,
        "offset": 134,
      },
    },
    "message": "Cannot return \`'undefined'\` because string is incompatible with number (see line 9).",
    "start": 10,
    "type": "default",
  },
  Object {
    "end": 14,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 14,
        "offset": 207,
      },
      "start": Object {
        "column": 10,
        "line": 14,
        "offset": 203,
      },
    },
    "message": "Cannot return \`some\` because string (see line 13) is incompatible with number (see line 13).",
    "start": 14,
    "type": "default",
  },
  Object {
    "end": 17,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 17,
        "offset": 244,
      },
      "start": Object {
        "column": 19,
        "line": 17,
        "offset": 230,
      },
    },
    "message": "Cannot assign \`'hello world!'\` to \`str\` because string is incompatible with number.",
    "start": 17,
    "type": "default",
  },
  Object {
    "end": 19,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 19,
        "offset": 256,
      },
      "start": Object {
        "column": 7,
        "line": 19,
        "offset": 253,
      },
    },
    "message": "Cannot declare \`who\` (see line 13) because the name is already bound.",
    "start": 19,
    "type": "default",
  },
  Object {
    "end": 21,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 21,
        "offset": 277,
      },
      "start": Object {
        "column": 5,
        "line": 21,
        "offset": 268,
      },
    },
    "message": "Cannot call \`moo\` because no arguments are expected by function (see line 9).",
    "start": 21,
    "type": "default",
  },
  Object {
    "end": 21,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 21,
        "offset": 277,
      },
      "start": Object {
        "column": 11,
        "line": 21,
        "offset": 274,
      },
    },
    "message": "Cannot add \`str\` and \`who\` because function (see line 13) is incompatible with number (see line 17).",
    "start": 21,
    "type": "default",
  },
]
`;

exports[`Format 4.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 28,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 28,
        "offset": 431,
      },
      "start": Object {
        "column": 13,
        "line": 28,
        "offset": 428,
      },
    },
    "message": "Cannot create \`Foo\` element because property \`lastName\` is missing in props but exists in \`Props\` (see line 12).",
    "start": 28,
    "type": "default",
  },
  Object {
    "end": 28,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 28,
        "offset": 448,
      },
      "start": Object {
        "column": 27,
        "line": 28,
        "offset": 442,
      },
    },
    "message": "Cannot create \`Foo\` element because string is incompatible with object type (see line 8) in property \`firstName\`.",
    "start": 28,
    "type": "default",
  },
]
`;

exports[`Format 5.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 9,
        "offset": 93,
      },
      "start": Object {
        "column": 3,
        "line": 9,
        "offset": 90,
      },
    },
    "message": "Cannot call \`s\` with \`'4'\` bound to \`x\` because string is incompatible with number (see line 5).",
    "start": 9,
    "type": "default",
  },
]
`;

exports[`Format 6.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 9,
        "offset": 113,
      },
      "start": Object {
        "column": 5,
        "line": 9,
        "offset": 109,
      },
    },
    "message": "Cannot call \`foo\` with \`1234\` bound to \`bar\` because number is incompatible with object type (see line 5).",
    "start": 9,
    "type": "default",
  },
  Object {
    "end": 11,
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 11,
        "offset": 135,
      },
      "start": Object {
        "column": 5,
        "line": 11,
        "offset": 121,
      },
    },
    "message": "Cannot call \`foo\` with object literal bound to \`bar\` because property \`baz\` is missing in object literal but exists in object type (see line 5).",
    "start": 11,
    "type": "default",
  },
]
`;

exports[`Format 7.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 7,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 7,
        "offset": 80,
      },
      "start": Object {
        "column": 3,
        "line": 7,
        "offset": 77,
      },
    },
    "message": "Cannot call \`s\` with \`'4'\` bound to \`x\` because string is incompatible with number (see ./5.example.js:5).",
    "start": 7,
    "type": "default",
  },
]
`;

exports[`Format 8.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 7,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 7,
        "offset": 85,
      },
      "start": Object {
        "column": 5,
        "line": 7,
        "offset": 81,
      },
    },
    "message": "Cannot call \`foo\` with \`1234\` bound to \`bar\` because number is incompatible with object type (see ./6.example.js:5).",
    "start": 7,
    "type": "default",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 9,
        "offset": 107,
      },
      "start": Object {
        "column": 5,
        "line": 9,
        "offset": 93,
      },
    },
    "message": "Cannot call \`foo\` with object literal bound to \`bar\` because property \`baz\` is missing in object literal but exists in object type (see ./6.example.js:5).",
    "start": 9,
    "type": "default",
  },
]
`;

exports[`Format 9.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 9,
        "offset": 165,
      },
      "start": Object {
        "column": 18,
        "line": 9,
        "offset": 160,
      },
    },
    "message": "Cannot create \`Hello\` element because property \`name\` is missing in props but exists in object type (see ./9.example.import.js:7).",
    "start": 9,
    "type": "default",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 57,
        "line": 9,
        "offset": 200,
      },
      "start": Object {
        "column": 28,
        "line": 9,
        "offset": 170,
      },
    },
    "message": "Cannot call \`ReactDOM.render\` with \`document.getElementById(...)\` bound to \`container\` because null (see https://github.com/facebook/flow/blob/v0.66.0/lib/dom.js#L623) is incompatible with \`Element\` (see https://github.com/facebook/flow/blob/v0.66.0/lib/react-dom.js#L18).",
    "start": 9,
    "type": "default",
  },
]
`;
